added gitignore file

--- a/Lesson_1/index.html
+++ b/Lesson_1/index.html
@@ -10,6 +10,7 @@
     <p>This is the titles</p>
     <footer>
         <h1>The footer is here</h1>
+        <p>A new text added</p>
     </footer>
 </body>
 </html>
