--- a/Lesson_1/index.html
+++ b/Lesson_1/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Hello World!</h1>
     <p>This is the titles</p>
+    <p>Adding the homework</p>
     <footer>
         <h1>The footer is here</h1>
-        <p>A new text added</p>
     </footer>
 </body>
 </html>
