--- a/Lesson_1/index.html
+++ b/Lesson_1/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-    <p>This is the titles</p>
-    <p>Adding the homework</p>
-    <footer>
-        <h1>The footer is here</h1>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <p>This is the title</p>
+        <p>Adding the homework</p>
+        <footer>
+        <p>Return to main page <a href="/index.html" target="_blank">Main Page</a></p>
+        </footer>
+    </body>
 </html>
