--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Homeworks Page</title>
 </head>
 <body>
     <h2>My Homeworks: </h2>
-    <a href="Lesson_1/">Lesson 1</a>
+    <ul>
+        <li><a href="Lesson_1/index.html" target="_blank">Lesson 1</a></li>
+        <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
+    </ul>
 </body>
 </html>
