--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -20,7 +20,7 @@
     <div>
         <h1>Banana Pancake</h1>
 
-        <img src="/Lesson_2/img/pancake.jpg" alt="Pancake picture" width="500" height="500" />
+        <img src="Lesson_2/img/pancake.jpg" alt="Pancake picture" width="500" height="500" />
 
         <h2>Main Ingredients</h2>
 
