--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="Lesson_1/index.html" target="_blank">Lesson 1</a></li>
         <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
+        <li><a href="Lesson_3/index.html" target="_blank">Lesson 3</a></li>
     </ul>
 </body>
 </html>
