Adding css to the cv page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="Lesson_1/index.html" target="_blank">Lesson 1</a></li>
         <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
         <li><a href="Lesson_3/index.html" target="_blank">Lesson 3</a></li>
+        <li><a href="Lesson_4/index.html" target="_blank">Lesson 4</a></li>
     </ul>
 </body>
 </html>
