added css to the main page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Homeworks Page</title>
-</head>
-<body>
-    <h2>My Homeworks: </h2>
-    <ul>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <div>
+      <h2>My Homeworks:</h2>
+      <ul>
         <li><a href="Lesson_1/index.html" target="_blank">Lesson 1</a></li>
         <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
         <li><a href="Lesson_3/index.html" target="_blank">Lesson 3</a></li>
         <li><a href="Lesson_4/index.html" target="_blank">Lesson 4</a></li>
-    </ul>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
