made updates to the tags and some css

--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -16,7 +16,7 @@
     <main>
       <div>
         <p>Email: <a href="mailto:david@xyz.com">david@xyz.com</a></p>
-        <p>Phone: +351 123 456 789</p>
+        <p>Phone:<a href="tel:+351914429273">+351 123 456 789</a></p>
         <p>Location: Lisbon, Portugal</p>
       </div>
 
