--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -17,7 +17,7 @@
     <main>
       <div class="section contact-info">
         <p>Email: <a href="mailto:david@xyz.com">david@xyz.com</a></p>
-        <p>Phone: +351 123 456 789</p>
+        <p>Phone:<a href="tel:+351914429273">+351 123 456 789</a></p>
         <p>Location: Lisbon, Portugal</p>
       </div>
 
@@ -38,7 +38,7 @@
         <div class="experience">
           <ul>
             <li>
-              <strong>Quality Assurance Analyst</strong>, Startup XYZ, Tokyo
+              <span class="previous_positions">Quality Assurance Analyst</span>, Startup XYZ, Tokyo
               (2019 - Present)
             </li>
             <ul>
@@ -56,7 +56,7 @@
 
           <ul>
             <li>
-              <strong>Customer Service Representative</strong>, Company ABC,
+              <span class="previous_positions">Customer Service Representative</span>, Company ABC,
               Tokyo (2017 - 2019)
             </li>
             <ul>
