lesson 6 page setup

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
         <li><a href="Lesson_3/index.html" target="_blank">Lesson 3</a></li>
         <li><a href="Lesson_4/index.html" target="_blank">Lesson 4</a></li>
+        <li><a href="Lesson_5/index.html" target="_blank">Lesson 5</a></li>
+        <li><a href="Lesson_6/index.html" target="_blank">Lesson 6</a></li>
       </ul>
     </div>
   </body>
