--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Gautam - CV</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <header>
@@ -38,8 +38,8 @@
         <div class="experience">
           <ul>
             <li>
-              <span class="previous_positions">Quality Assurance Analyst</span>, Startup XYZ, Tokyo
-              (2019 - Present)
+              <span class="previous_positions">Quality Assurance Analyst</span>,
+              Startup XYZ, Tokyo (2019 - Present)
             </li>
             <ul>
               <li>
@@ -56,8 +56,9 @@
 
           <ul>
             <li>
-              <span class="previous_positions">Customer Service Representative</span>, Company ABC,
-              Tokyo (2017 - 2019)
+              <span class="previous_positions"
+                >Customer Service Representative</span
+              >, Company ABC, Tokyo (2017 - 2019)
             </li>
             <ul>
               <li>
@@ -96,7 +97,6 @@
         <p>Japanese : Fluent</p>
         <p>English : Native Proficieny</p>
         <p>Portuguese : Basic</p>
-
       </div>
 
       <summary class="section">
