skeleton for weather forecast

--- a/Lesson_6/index.html
+++ b/Lesson_6/index.html
@@ -1,15 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Figma Weather App Design</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <summary class="section">
+
+    <main>
+        
+        <div class="container">
+            <h1 class="header">CSS Weather Forecast<i class="fa-regular fa-sun"></i></h1>
+            <ul class="blocks">
+                <li class="block50">
+                    <div>
+                        <p>Lisbon</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Paris</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Belgrade</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Venice</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Tel-Aviv</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Cairo</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>New-York</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>New-Delhi</p>
+                    </div>
+                </li>
+                <li class="block50">
+                    <div>
+                        <p>San-Fransisco</p>
+                    </div>
+                </li>
+                <li class="block25">
+                    <div>
+                        <p>Tokyo</p>
+                    </div>
+                </li>
+                <li class="block100">
+                    <div>
+                        <p>Sydney</p>
+                    </div>
+                </li>
+            </ul>
+        
+            <p>Have a nice day and don't forget an umbrella if you are in New Delhi now!</p>
+        </div>
+    </main>
+
+    <!-- <summary class="section">
         Return to main page
         <a href="../index.html" target="_blank">Main Page</a>
-      </summary>
+    </summary> -->
 </body>
+
 </html>
