--- a/Lesson_6/index.html
+++ b/Lesson_6/index.html
@@ -6,73 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma Weather App Design</title>
     <link rel="stylesheet" href="styles/main.css">
-    <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
 </head>
 
 <body>
 
     <main>
-        
+
         <div class="container">
-            <h1 class="header">CSS Weather Forecast<i class="fa-regular fa-sun"></i></h1>
+            <h1 class="header">CSS Weather Forecast<img src="images/forecast_icon.png"></h1>
             <ul class="blocks">
                 <li class="block50">
                     <div>
                         <p>Lisbon</p>
+                        <p>21°C<i class="wi wi-day-sunny"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Paris</p>
+                        <p>11°C<i class="wi wi-night-showers"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Belgrade</p>
+                        <p>15°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Venice</p>
+                        <p>21°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Tel-Aviv</p>
+                        <p>32°C<i class="wi wi-hot"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Cairo</p>
+                        <p>21°C<i class="wi wi-day-sunny"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>New-York</p>
+                        <p>17°C<i class="wi wi-day-storm-showers"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>New-Delhi</p>
+                        <p>17°C<i class="wi wi-rain-mix"></i></p>
                     </div>
                 </li>
                 <li class="block50">
                     <div>
                         <p>San-Fransisco</p>
+                        <p>15°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
                 <li class="block25">
                     <div>
                         <p>Tokyo</p>
+                        <p>8°C<i class="wi wi-night-clear"></i></p>
                     </div>
                 </li>
                 <li class="block100">
                     <div>
                         <p>Sydney</p>
+                        <p>25°C<i class="wi wi-night-cloudy"></i></p>
                     </div>
                 </li>
             </ul>
-        
+
             <p>Have a nice day and don't forget an umbrella if you are in New Delhi now!</p>
         </div>
     </main>
