updating the css

--- a/Lesson_6/index.html
+++ b/Lesson_6/index.html
@@ -7,6 +7,10 @@
     <title>Figma Weather App Design</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,67 +20,67 @@
         <div class="container">
             <h1 class="header">CSS Weather Forecast<img src="images/forecast_icon.png"></h1>
             <ul class="blocks">
-                <li class="block50">
+                <li class="block50" id="lisbon">
                     <div>
                         <p>Lisbon</p>
                         <p>21°C<i class="wi wi-day-sunny"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="paris">
                     <div>
                         <p>Paris</p>
                         <p>11°C<i class="wi wi-night-showers"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="belgrade">
                     <div>
                         <p>Belgrade</p>
                         <p>15°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="venice">
                     <div>
                         <p>Venice</p>
                         <p>21°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="telaviv">
                     <div>
                         <p>Tel-Aviv</p>
                         <p>32°C<i class="wi wi-hot"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="cairo">
                     <div>
                         <p>Cairo</p>
                         <p>21°C<i class="wi wi-day-sunny"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="newyork">
                     <div>
                         <p>New-York</p>
                         <p>17°C<i class="wi wi-day-storm-showers"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="newdelhi">
                     <div>
                         <p>New-Delhi</p>
                         <p>17°C<i class="wi wi-rain-mix"></i></p>
                     </div>
                 </li>
-                <li class="block50">
+                <li class="block50" id="sanfran">
                     <div>
                         <p>San-Fransisco</p>
                         <p>15°C<i class="wi wi-day-cloudy"></i></p>
                     </div>
                 </li>
-                <li class="block25">
+                <li class="block25" id="tokyo">
                     <div>
                         <p>Tokyo</p>
                         <p>8°C<i class="wi wi-night-clear"></i></p>
                     </div>
                 </li>
-                <li class="block100">
+                <li class="block100" id="sydney">
                     <div>
                         <p>Sydney</p>
                         <p>25°C<i class="wi wi-night-cloudy"></i></p>
@@ -88,10 +92,10 @@
         </div>
     </main>
 
-    <!-- <summary class="section">
+    <summary class="section">
         Return to main page
         <a href="../index.html" target="_blank">Main Page</a>
-    </summary> -->
+    </summary>
 </body>
 
 </html>
