--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="Lesson_5/index.html" target="_blank">Lesson 5</a></li>
         <li><a href="Lesson_6/index.html" target="_blank">Lesson 6</a></li>
         <li><a href="Lesson_7/index.html" target="_blank">Lesson 7</a></li>
+        <li><a href="Lesson_8/index.html" target="_blank">Lesson 8</a></li>
       </ul>
     </div>
   </body>
