--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="Lesson_6/index.html" target="_blank">Lesson 6</a></li>
         <li><a href="Lesson_7/index.html" target="_blank">Lesson 7</a></li>
         <li><a href="Lesson_8/index.html" target="_blank">Lesson 8</a></li>
+        <li><a href="Lesson_9/index.html" target="_blank">Lesson 9</a></li>
       </ul>
     </div>
   </body>
