Added some hints of BEM to lesson 7

--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -33,8 +33,8 @@
     <main class="container">
         <section class="hero">
             <div class="column">
-                <h1 class="main_title">The Design Thinking superpowers</h1>
-                <p class="title_details">Tools, tutorials, design and innovation experts, all in one place! The most
+                <h1 class="hero__title">The Design Thinking superpowers</h1>
+                <p class="hero__details">Tools, tutorials, design and innovation experts, all in one place! The most
                     intuitive way to
                     imagine your next user
                     experience.</p>
@@ -42,8 +42,8 @@
                     <button class="action started_button button"><a href="#">Get started</a></button>
 
 
-                    <button class="watch_video_button"><img src="images/triangle_icon.svg" alt="Triangle icon"
-                            class="triangle"><span class="watch_text">Watch Video</span></button>
+                    <button class="hero__video__button"><img src="images/triangle_icon.svg" alt="Triangle icon"
+                            class="hero__triangle"><span class="hero__watch__text">Watch Video</span></button>
                 </div>
             </div>
             <div class="column">
@@ -57,7 +57,7 @@
             <div class="column cards">
                 <img src="images/pointer-icon.svg" alt="Pointer Icon" class="icon pointer_icon">
                 <div class="details">
-                    <h3 class="title_detail">
+                    <h3 class="title__detail">
                         First click tests
                     </h3>
                     <p class="deets">While most people enjoy gambling</p>
@@ -66,7 +66,7 @@
             <div class="column cards">
                 <img src="images/survey-icon.svg" alt="Survey Icon " class="icon survey_icon">
                 <div class="details">
-                    <h3 class="title_detail">
+                    <h3 class="title__detail">
                         Design surveys
                     </h3>
                     <p class="deets">Sports betting, lottery and bingo playing for the fun.</p>
@@ -75,7 +75,7 @@
             <div class="column cards">
                 <img src="images/preference-icon.svg" alt="Preference Icon" class="icon preference_icon">
                 <div class="details">
-                    <h3 class="title_detail">
+                    <h3 class="title__detail">
                         Preference tests
                     </h3>
                     <p class="deets">The Myspace page defines the individual.</p>
@@ -84,7 +84,7 @@
             <div class="column cards">
                 <img src="images/time-icon.svg" alt="Hourglass" class="icon hourglass_icon">
                 <div class="details">
-                    <h3 class="title_detail">
+                    <h3 class="title__detail">
                         Five second tests
                     </h3>
                     <p class="deets">Personal choices and the overall personality of the person.</p>
