--- a/Lesson_8/index.html
+++ b/Lesson_8/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,8 +13,9 @@
 
 <body>
     <header class="header">
-        <div class="container header__container">
-            <a href="#" class="header__logo"><img src="../Lesson_7/../Lesson_7/images/productly-logo.svg" alt="Productly logo"></a>
+        <div class="header__container container">
+            <a href="#" class="header__logo"><img src="../Lesson_7/../Lesson_7/images/productly-logo.svg"
+                    alt="Productly logo"></a>
 
             <nav class="header__nav">
                 <ul class="header__menu">
@@ -33,17 +34,20 @@
     <main class="container">
         <section class="hero">
             <div class="column">
-                <h1 class="main_title">The Design Thinking superpowers</h1>
-                <p class="title_details">Tools, tutorials, design and innovation experts, all in one place! The most
-                    intuitive way to
-                    imagine your next user
-                    experience.</p>
-                <div class="main_title_actions">
-                    <button class="action started_button button"><a href="#">Get started</a></button>
-
-
-                    <button class="watch_video_button"><img src="../Lesson_7/images/triangle_icon.svg" alt="Triangle icon"
-                            class="triangle"><span class="watch_text">Watch Video</span></button>
+                <h1 class="hero__title">The Design Thinking superpowers</h1>
+                <p class="hero__description">
+                    Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
+                    your next user
+                    experience.
+                </p>
+                <div class="hero__actions">
+                    <button class="action started_button button">
+                        <a href="#" class="hero__button-link">Get started</a>
+                    </button>
+                    <button class="watch_video_button">
+                        <img src="../Lesson_7/images/triangle_icon.svg" alt="Triangle icon" class="triangle">
+                        <span class="hero__watch-text">Watch Video</span>
+                    </button>
                 </div>
             </div>
             <div class="column">
@@ -51,195 +55,219 @@
             </div>
         </section>
         <section class="feature">
-            <div class="feature_heading">
+            <div class="feature__heading">
                 <h2>We design tools to unveil your superpowers</h2>
             </div>
-            <div class="column cards">
-                <img src="../Lesson_7/images/pointer-icon.svg" alt="Pointer Icon" class="icon pointer_icon">
-                <div class="details">
-                    <h3 class="title_detail">
-                        First click tests
-                    </h3>
-                    <p class="deets">While most people enjoy gambling</p>
+
+            <div class="feature__card feature__card--container">
+                <img src="../Lesson_7/images/pointer-icon.svg" alt="Pointer Icon"
+                    class="feature__icon feature__icon--pointer">
+                <div class="feature__details">
+                    <h3 class="feature__detail-title">First click tests</h3>
+                    <p class="feature__description">While most people enjoy gambling</p>
                 </div>
             </div>
-            <div class="column cards">
-                <img src="../Lesson_7/images/survey-icon.svg" alt="Survey Icon " class="icon survey_icon">
-                <div class="details">
-                    <h3 class="title_detail">
-                        Design surveys
-                    </h3>
-                    <p class="deets">Sports betting, lottery and bingo playing for the fun.</p>
+
+            <div class="feature__card feature__card--container">
+                <img src="../Lesson_7/images/survey-icon.svg" alt="Pointer Icon"
+                    class="feature__icon feature__icon--survey">
+                <div class="feature__details">
+                    <h3 class="feature__detail-title">Design surveys</h3>
+                    <p class="feature__description">Sports betting, lottery and bingo playing for the fun.</p>
                 </div>
             </div>
-            <div class="column cards">
-                <img src="../Lesson_7/images/preference-icon.svg" alt="Preference Icon" class="icon preference_icon">
-                <div class="details">
-                    <h3 class="title_detail">
-                        Preference tests
-                    </h3>
-                    <p class="deets">The Myspace page defines the individual.</p>
+
+            <div class="feature__card feature__card--container">
+                <img src="../Lesson_7/images/preference-icon.svg" alt="Pointer Icon"
+                    class="feature__icon feature__icon--preference">
+                <div class="feature__details">
+                    <h3 class="feature__detail-title">Preference tests</h3>
+                    <p class="feature__description">The Myspace page defines the individual.</p>
                 </div>
             </div>
-            <div class="column cards">
-                <img src="../Lesson_7/images/time-icon.svg" alt="Hourglass" class="icon hourglass_icon">
-                <div class="details">
-                    <h3 class="title_detail">
-                        Five second tests
-                    </h3>
-                    <p class="deets">Personal choices and the overall personality of the person.</p>
+
+            <div class="feature__card feature__card--container">
+                <img src="../Lesson_7/images/time-icon.svg" alt="Pointer Icon"
+                    class="feature__icon feature__icon--hourglass">
+                <div class="feature__details">
+                    <h3 class="feature__detail-title">Five second tests</h3>
+                    <p class="feature__description">Personal choices and the overall personality of the person.</p>
                 </div>
             </div>
-            <div class="mid_sign_up">
-                <button class="button action started_button">SIGN UP NOW</button>
+
+            <div class="feature__sign-up">
+                <button class="button action feature__button">SIGN UP NOW</button>
             </div>
+
         </section>
+
         <section class="professional">
-            <div class="column">
-                <p class="deets">Effortless Validation for</p>
-                <h3 class="section_title">Design Professionals</h3>
-                <p class="deets">The Myspace page defines the individual, his or her characteristics, traits, personal
-                    choices and the overall
-                    personality of the person.</p>
-                <div>
-                    <div class="point">
-                        <div class="point_title">
+            <div class="professional__column">
+                <p class="professional__text">Effortless Validation for</p>
+                <h3 class="professional__title">Design Professionals</h3>
+                <p class="professional__description">
+                    The Myspace page defines the individual, his or her characteristics, traits, personal choices and
+                    the overall
+                    personality of the person.
+                </p>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Accessory makers
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             While most people enjoy casino gambling, sports betting, lottery and bingo playing for the
                             fun.
                         </div>
                     </div>
-                    <div class="point">
-                        <div class="point_title">
+                </div>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Alterationists
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             If you are looking for a new way to promote your business that won’t cost you more money.
                         </div>
                     </div>
-                    <div class="point">
-                        <div class="point_title">
+                </div>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Custom Design designers
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             If you are looking for a new way to promote your business that won’t cost you more money.
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
+
+            <div class="professional__column">
                 <img src="../Lesson_7/images/professional-image-guy.svg" alt="A guy with red shirt" class="image">
             </div>
         </section>
 
         <section class="professional">
-            <div class="column">
+            <div class="professional__column">
                 <img src="../Lesson_7/images/product-manager-image.svg" alt="Guy with blue shirt" class="image">
             </div>
-            <div class="column managers">
-                <p class="deets">
+
+            <div class="professional__column">
+                <p class="professional__text">
                     Easier decision making for
                 </p>
-                <h3 class="section_title">
-                    Product managers
-                </h3>
-                <p class="deets">
-                    The Myspace page defines the individual, his or her characteristics, traits, personal choices and
+
+                <h3 class="professional__title">Product managers</h3>
+                <p class="professional__text">The Myspace page defines the individual, his or her characteristics,
+                    traits, personal choices and
                     the overall
-                    personality of the person.
-                </p>
-                <div class="section_list">
-                    <div class="point checklist">
-                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="check">
-                        <div class="deets">
-                            Never worry about overpaying for your energy again
-                        </div>
+                    personality of the person.</p>
+
+                <div class="professional__list">
+                    <div class="professional__point professional__list-item--checklist">
+                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="professional__check-icon">
+                        <div class="professional__text">Never worry about overpaying for your energy again</div>
                     </div>
-                    <div class="point checklist">
-                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="check">
-                        <div class="deets">
-                            We will only switch you to energy companies that we trust and will treat you right.
-                        </div>
+                </div>
+
+                <div class="professional__list">
+                    <div class="professional__point professional__list-item--checklist">
+                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="professional__check-icon">
+                        <div class="professional__text">We will only switch you to energy companies that we trust and
+                            will treat you right.</div>
                     </div>
-                    <div class="point checklist">
-                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="check">
-                        <div class="deets">
-                            We track the markets daily and know where the savings are.
-                        </div>
+                </div>
+
+                <div class="professional__list">
+                    <div class="professional__point professional__list-item--checklist">
+                        <img src="../Lesson_7/images/tick.svg" alt="Tick mark" class="professional__check-icon">
+                        <div class="professional__text">We track the markets daily and know where the savings are.</div>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="professional">
-            <div class="column">
-                <p class="deets">Optimisation for</p>
-                <h3 class="section_title">Marketers</h3>
-                <p class="deets">Few would argue that, despite the advancements of feminism over the past three decades,
-                    women still face a double
-                    standard when it comes to their behavior.</p>
-                <div>
-                    <div class="point">
-                        <div class="point_title">
+            <div class="professional__column">
+                <p class="professional__text">Optimisation for</p>
+                <h3 class="professional__title">Marketers</h3>
+                <p class="professional__description">
+                    Few would argue that, despite the advancements of feminism over the past three decades, women still
+                    face a double
+                    standard when it comes to their behavior.
+                </p>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Accessory makers
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             While most people enjoy casino gambling, sports betting, lottery and bingo playing for the
                             fun.
                         </div>
                     </div>
-                    <div class="point">
-                        <div class="point_title">
+                </div>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Alterationists
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             If you are looking for a new way to promote your business that won’t cost you more money.
                         </div>
                     </div>
-                    <div class="point">
-                        <div class="point_title">
+                </div>
+
+                <div class="professional__points">
+                    <div class="professional__point">
+                        <div class="professional__point-title">
                             Custom Design designers
                         </div>
-                        <div class="deets">
+                        <div class="professional__point-description">
                             If you are looking for a new way to promote your business that won’t cost you more money.
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
+
+            <div class="professional__column">
                 <img src="../Lesson_7/images/marketers-image.svg" alt="A guy with red shirt" class="image">
             </div>
         </section>
     </main>
 
-    <footer class="container footer">
+    <footer class="footer container">
         <a href="#" class="logo_link"><img src="../Lesson_7/images/productly-logo.svg" alt="Productly logo"></a>
 
-        <div class="footer_nav">
-            <ul class="column">
-                <li><a href="#" class="nav_item">About Us</a></li>
-                <li><a href="#" class="nav_item">Blog</a></li>
-                <li><a href="#" class="nav_item">Contact</a></li>
-                <li><a href="#" class="nav_item">FAQ</a></li>
+        <div class="footer__navigation">
+            <ul class="footer__list">
+                <li><a href="#" class="footer__link">About Us</a></li>
+                <li><a href="#" class="footer__link">Blog</a></li>
+                <li><a href="#" class="footer__link">Contact</a></li>
+                <li><a href="#" class="footer__link">FAQ</a></li>
             </ul>
 
-            <ul class="column">
-                <li><a href="#" class="nav_item">Disclaimer</a></li>
-                <li><a href="#" class="nav_item">Financing</a></li>
-                <li><a href="#" class="nav_item">Privacy Policy</a></li>
-                <li><a href="#" class="nav_item">Terms of Service</a></li>
+            <ul class="footer__list">
+                <li><a href="#" class="footer__link">Disclaimer</a></li>
+                <li><a href="#" class="footer__link">Financing</a></li>
+                <li><a href="#" class="footer__link">Privacy Policy</a></li>
+                <li><a href="#" class="footer__link">Terms of Service</a></li>
             </ul>
-            <div class="column">
-                <div class="email">
-                    <input type="text" name="user_email" class="email_sign" placeholder="Email address">
-                    <button class="button action started_button">Sign Up Now</button>
+
+            <div class="footer__list">
+                <div class="footer__email">
+                    <input type="text" name="user_email" class="footer__input" placeholder="Email address">
+                    <button class="button action footer__button">Sign Up Now</button>
                 </div>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
