--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Homeworks Page</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <div>
-      <h2>My Homeworks:</h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Homeworks Page</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <div>
+    <h2>My Homeworks:</h2>
+    <div class="scrollable_list">
       <ul>
         <li><a href="Lesson_1/index.html" target="_blank">Lesson 1</a></li>
         <li><a href="Lesson_2/index.html" target="_blank">Lesson 2</a></li>
@@ -23,7 +23,11 @@
         <li><a href="Lesson_7/index.html" target="_blank">Lesson 7</a></li>
         <li><a href="Lesson_8/index.html" target="_blank">Lesson 8</a></li>
         <li><a href="Lesson_9/index.html" target="_blank">Lesson 9</a></li>
+        <li><a href="Lesson_10/Classroom practice/index.html" target="_blank">Lesson 10</a></li>
+        <li><a href="Lesson_11/index.html" target="_blank">Lesson 11</a></li>
       </ul>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
