--- a/Lesson_13/index.html
+++ b/Lesson_13/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
     <header class="header">
         <div class="navigation container">
             <a href="#" class="logo">
@@ -23,6 +25,91 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="hero">
+            <section class="container hero_contents">
+                <div class="column">
+                    <p class="intro_text">
+                        An agency that helps you
+                    </p>
+                    <h1 class="heading">Grow your Business</h1>
+                    <p class="description">
+                        Build an award winning website that grows your business with the help of Last Door. Our 15+
+                        years of experience in
+                        building websites have grown businesses of 1000+ clients.
+                    </p>
+                    <button class="btn first_button">Get your free consulation now</button>
+                </div>
+                <div>
+                    <img src="./images/hero.svg" alt="Girl on a staircase in a room">
+                </div>
+            </section>
+        </div>
+
+        <div class="container banner">
+            <p class="intro_text">Our Services</p>
+            <h2 class="banner_title">Why choose Agency theme</h2>
+            <div class="cards">
+                <div class="column">
+                    <img src="./images/icon-ultra-responsive.svg" alt="Different devices" class="banner_icon">
+                    <p class="heading">Ultra Responsive</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                        fermentum vestibulum.
+                    </p>
+                </div>
+
+                <div class="column">
+                    <img src="./images/icon-award-winning-design.svg" alt="An award" class="banner_icon">
+                    <p class="heading">Award Winning Design</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                        fermentum vestibulum.
+                    </p>
+                </div>
+
+                <div class="column">
+                    <img src="./images/icon-online-support.svg" alt="Customer support" class="banner_icon">
+                    <p class="heading">Support & Updates</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                        fermentum vestibulum.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="metrics">
+            <div class="small_container">
+                <div class="cards">
+                    <div class="column">
+                        <div class="indexes">
+                            <p class="heading">7.5k</p>
+                            <i class="fa-solid fa-plus icon"></i>
+                        </div>
+                        <p class="intro_text">Websites, Softwares & Apps.</p>
+                    </div>
+
+                    <div class="column">
+                        <div class="indexes">
+                            <p class="heading">15yrs</p>
+                            <i class="fa-solid fa-plus icon"></i>
+                        </div>
+                        <p class="intro_text">Years of Experience</p>
+                    </div>
+
+                    <div class="column">
+                        <div class="indexes">
+                            <p class="heading">6.2k</p>
+                            <i class="fa-solid fa-plus icon"></i>
+                        </div>
+                        <p class="intro_text">Customers Served</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
