project_1 page images and icons

--- a/Lesson_12/index.html
+++ b/Lesson_12/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <div class="navigation container">
             <a href="#" class="logo">
                 <img src="./images/logo.svg" alt="Fully Agency Logo" />
             </a>
-            <nav class="nav_menu">
+            <nav>
                 <ul class="nav_list">
                     <li><a href="#" class="navlist_item">Services</a></li>
                     <li><a href="#" class="navlist_item">About</a></li>
@@ -36,7 +36,7 @@
                         help of Last Door. Our 15+ years of experience in building
                         websites have grown businesses of 1000+ clients.
                     </p>
-                    <button class="btn first_button">
+                    <button class="btn">
                         Get your free consulation now
                     </button>
                 </div>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
 
-                <div class="relax_illustration">
+                <div>
                     <img src="./images/image-relaxing.svg" alt="Relaxing Lady" />
                 </div>
             </div>
@@ -247,7 +247,7 @@
 
                         <div class="form_item">
                             <label for="user_email" class="input_field">Your email address
-                                <input type="email" placeholder="hello@lastdoor.store">
+                                <input type="email" placeholder="hello@lastdoor.store" name="user_email">
                             </label>
                         </div>
 
